# 193-score-matching-trading

./: README.md  README.ru.md  README.specify.md  readme.simple.md  readme.simple.ru.md
rust/: Cargo.toml
rust/examples/: backtest.rs  basic_score_matching.rs  bybit_trading.rs
rust/src/: lib.rs
rust/src/api/: bybit.rs  mod.rs
rust/src/backtest/: mod.rs
rust/src/score/: langevin.rs  mod.rs  network.rs  training.rs
rust/src/trading/: mod.rs  signals.rs
rust/src/utils/: mod.rs
